# LIGO-Glitch-Classification

./: README.md  pyproject.toml  requirements-serve.txt  requirements.txt
inference/: app.py  predict.py
notebooks/: 01_eda.ipynb
src/: calibration.py  data.py  evaluate.py  model.py  train.py
