[project]
name = "glitch-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.31.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pandas-stubs~=3.0.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
